# rust-webserver-example-with-iron-diesel-r2d2-serde

./: .editorconfig  .env  Cargo.toml  LICENSE.md  README.md
migrations/20170405171459_create_users/: up.sql
migrations/20170405192950_add_basic_data/: down.sql  up.sql
migrations/20170409033306_date_to_datetime/: down.sql  up.sql
migrations/20170409033843_add_timezone/: up.sql
migrations/20170414004051_add_indexes_to_users/: down.sql  up.sql
migrations/20170414034118_add_indexes_to_users_name/: down.sql  up.sql
migrations/20170415012919_create_posts_table/: up.sql
src/: db.rs  endpoints.rs  main.rs  test_controller.rs  user_controller.rs  user_model.rs
src/controllers/: login.rs  mod.rs  post.rs  test.rs  user.rs  utils.rs
src/dal/: mod.rs
src/dal/models/: post.rs  user.rs
src/http_adaptor/: adaptor.rs  endpoints.rs  mod.rs
src/http_adaptor/api_structs/: login.rs  mod.rs
src/middlewares/: diesel_pool.rs  get_salt.rs  logger.rs  login.rs  mod.rs  utils.rs
src/utils/: logger.rs  macros.rs  mod.rs
