[package]
name = "templic-backend"
version = "0.1.0"
authors = ["David Bonet <webbonet@gmail.com>"]

[dependencies]
r2d2 = "0.7.0"
r2d2-diesel = "0.12.0"
diesel = { version = "0.11.0", features = ["postgres"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "^0.8.0"
router = "*"

[dependencies.iron]
version = "*"

