[package]
name = "rust-webserver-demo"
version = "0.1.0"
authors = ["David Bonet <webbonet@gmail.com>"]

[dependencies]
r2d2 = "^0.7.0"
r2d2-diesel = "^0.12.0"
diesel = { version = "^0.12.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "^0.12.0", features = ["postgres"] }
dotenv = "^0.8.0"
router = "*"
chrono = { version = "^0.3", features = ["serde"] }
serde = "^0.9"
serde_derive = "^0.9"
serde_json = "^0.9"

[dependencies.iron]
version = "*"

[dependencies.mount]

git = "https://github.com/iron/mount.git"